bring old mk1pod IVA into new mk1pod_v2 add reviva support

--- a/GameData/KSA/IVAUpgrade/Spaces/mk1PodCockpit/internal.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/mk1PodCockpit/internal.cfg
@@ -1,10 +1,23 @@
 INTERNAL
 {
 	name = mk1PodCockpitKSA
+	MODEL
+	{
+		model = KSA/IVAUpgrade/Squad/mk1pod_IVA
+		texture = model000, Squad/Spaces/mk1PodCockpit/model000
+		texture = mk1pod_iva_props_diffuse, Squad/Spaces/mk1Pod_IVA/mk1pod_iva_props_diffuse
+		texture = mk1pod_iva_props_emissive, Squad/Spaces/mk1Pod_IVA/mk1pod_iva_props_emissive
+		texture = mk1pod_iva_props_normal, Squad/Spaces/mk1Pod_IVA/mk1pod_iva_props_normal
+		texture = mk1pod_iva_shell_diffuse, Squad/Spaces/mk1Pod_IVA/mk1pod_iva_shell_diffuse
+		texture = mk1pod_iva_shell_normal, Squad/Spaces/mk1Pod_IVA/mk1pod_iva_shell_normal
+		texture = pilot Seat, Squad/Spaces/Mk1-3/pilot Seat
+	}
 	MODULE
 	{
 		name = InternalSeat
-		seatTransformName = pilotSeat
+		seatTransformName = pilotSeat_01
+		portraitCameraName = pilotCamera_01
+		allowCrewHelmet = false
 	}
 	MODULE
 	{
