--- a/GameData/KSA/IVAUpgrade/Patches/Mk1_Pod.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/Mk1_Pod.cfg
@@ -1,8 +1,8 @@
-@PART[mk1pod]:HAS[@MODULE[RasterPropMonitorComputer]]:FINAL
+@PART[mk1pod_v2]
 {
-	@MODULE
+	%MODULE[RasterPropMonitorComputer]
 	{
-		@storedStrings = v 1.3.0|06.07.2015| Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
+		@storedStrings = v 1.4.0|06.01.2022| Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
 	}
 
 	@INTERNAL
@@ -11,16 +11,28 @@
 	}
 }
 
-@PART[mk1pod]:HAS[!MODULE[RasterPropMonitorComputer]]:FINAL
+@PART[mk1pod_v2]:AFTER[zzz_Reviva]
 {
-	MODULE
+	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[IVASwitch]]
 	{
-		name = RasterPropMonitorComputer
-		storedStrings = v 1.1.0|06.07.2015| Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
-	}
+		SUBTYPE
+		{
+			name = KSA
+			primaryColor = Green
+			secondaryColor = Grey
+			descriptionSummary = KSA IVA Upgrade
 
-	@INTERNAL
-	{
-		@name = mk1PodCockpitKSA
+			MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleIVASwitch
+				}
+				DATA
+				{
+					internalName = mk1PodCockpitKSA
+				}
+			}
+		}
 	}
 }
