update mk1 lander can remove some squad content

--- a/GameData/KSA/IVAUpgrade/Spaces/landerCabinSmallInternal/internal.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/landerCabinSmallInternal/internal.cfg
@@ -1,11 +1,27 @@
 INTERNAL
 {
 	name = landerCabinSmallInternalKSA
+	MODEL
+	{
+		model = Squad/Spaces/landerCabinSmallInternal/model
+	}
+	MODEL
+	{
+		model = Squad/Spaces/OverlayMasks/Size1LanderMask
+		rotation = -90, 0, 0
+	}
+	MODEL
+	{
+		model = Squad/Spaces/OverlayMasks/Size1LanderBorder
+		rotation = -90, 0, 0
+	}
 	MODULE
 	{
 		name = InternalSeat
 		seatTransformName = pilot
+		allowCrewHelmet = false
 		portraitCameraName = camera_pilot
+		displayseatName = #autoLoc_6002190 //#autoLoc_6002190 = Pilot Seat
 	}
 	MODULE
 	{
