--- a/GameData/KSA/IVAUpgrade/Patches/Mk1_LanderCan.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/Mk1_LanderCan.cfg
@@ -1,26 +1,38 @@
-@PART[landerCabinSmall]:HAS[@MODULE[RasterPropMonitorComputer]]:FINAL
+@PART[landerCabinSmall]
 {
-	@MODULE
+	%MODULE[RasterPropMonitor]
 	{
-		@storedStrings =     v 1.3.0|06.07.2015|  Mk1 LanderCan | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
+		@storedStrings = v 1.4.0|06.01.2022| Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
 	}
 
 	@INTERNAL
 	{
-		@name = landerCabinSmallInternalKSA
+		@name = KSA_landerCabinSmallInternal
 	}
 }
 
-@PART[landerCabinSmall]:HAS[!MODULE[RasterPropMonitorComputer]]:FINAL
+@PART[landerCabinSmall]:AFTER[zzz_Reviva]
 {
-	MODULE
+	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[IVASwitch]]
 	{
-		name = RasterPropMonitorComputer
-		storedStrings =     v 1.1.0|06.07.2015|  Mk1 LanderCan | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
-	}
+		SUBTYPE
+		{
+			name = KSA
+			primaryColor = Green
+			secondaryColor = Grey
+			descriptionSummary = KSA IVA Upgrade
 
-	@INTERNAL
-	{
-		@name = landerCabinSmallInternalKSA
+			MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleIVASwitch
+				}
+				DATA
+				{
+					internalName = KSA_landerCabinSmallInternal
+				}
+			}
+		}
 	}
 }
