Update rest of parts/internals to new names/structure remove all remaining squad assets

--- a/GameData/KSA/IVAUpgrade/Patches/Mk1_Cockpit.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/Mk1_Cockpit.cfg
@@ -1,26 +1,41 @@
-@PART[Mark1Cockpit]:HAS[@MODULE[RasterPropMonitorComputer]]:FINAL
+@PART[Mark1Cockpit]:AFTER[RasterPropMonitor]
 {
-	@MODULE
+	%MODULE
 	{
-		@storedStrings =     v 1.3.0|06.07.2015|  Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
+		%storedStrings =     v 1.5.0|06.04.2022|  Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
+		%triggeredEvents = ALCOR_CALLRECOVERYTEAM
 	}
 
 	@INTERNAL
 	{
-		@name = mk1CockpitInternalKSA
+		@name = KSA_mk1CockpitInternal
 	}
 }
 
-@PART[Mark1Cockpit]:HAS[!MODULE[RasterPropMonitorComputer]]:FINAL
+@PART[Mark1Cockpit]:AFTER[zzz_Reviva]
 {
-	MODULE
+	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[IVASwitch]]
 	{
-		name = RasterPropMonitorComputer
-		storedStrings =     v 1.1.0|06.07.2015|  Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
-	}
+		SUBTYPE
+		{
+			name = KSA
+			primaryColor = Green
+			secondaryColor = Grey
+			descriptionSummary = KSA IVA Upgrade
 
-	@INTERNAL
-	{
-		@name = mk1CockpitInternalKSA
+			MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleIVASwitch
+				}
+				DATA
+				{
+					internalName = KSA_mk1CockpitInternal
+					storedStrings =     v 1.5.0|06.04.2022|  Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
+					triggeredEvents = ALCOR_CALLRECOVERYTEAM
+				}
+			}
+		}
 	}
 }
