--- a/GameData/KSA/IVAUpgrade/Patches/Mk1_Pod_v2.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/Mk1_Pod_v2.cfg
@@ -1,4 +1,4 @@
-@PART[mk1pod]:AFTER[RasterPropMonitor]
+@PART[mk1pod_v2]:AFTER[RasterPropMonitor]
 {
 	%MODULE[RasterPropMonitorComputer]
 	{
@@ -8,11 +8,11 @@
 
 	@INTERNAL
 	{
-		@name = KSA_mk1PodCockpit
+		@name = KSA_mk1pod_IVA
 	}
 }
 
-@PART[mk1pod]:AFTER[zzz_Reviva]
+@PART[mk1pod_v2]:AFTER[zzz_Reviva]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[IVASwitch]]
 	{
@@ -31,7 +31,7 @@
 				}
 				DATA
 				{
-					internalName = KSA_mk1PodCockpit
+					internalName = KSA_mk1pod_IVA
 					storedStrings = v 1.5.0|06.01.2022| Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
 					triggeredEvents = ALCOR_CALLRECOVERYTEAM
 				}
