--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1InlineInternal.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1InlineInternal.cfg
@@ -1,24 +1,60 @@
 INTERNAL
 {
-	name = MK1_Inline_IntKSA
+	name = KSA_mk1InlineInternal
+	MODEL
+	{
+		model = Squad/Spaces/mk1InlineInternal/Mk1InlineIVA
+		texture = CockpitGeneric, Squad/Spaces/sharedAssets/CockpitGeneric
+		texture = CockpitGeneric_NRM, Squad/Spaces/sharedAssets/CockpitGeneric_NRM
+	}
+	MODEL
+	{
+		model = Squad/Spaces/OverlayMasks/Mk1InlineMask2
+	}
 	MODULE
 	{
 		name = InternalSeat
-		seatTransformName = PilotSeat
-		portraitCameraName = Camera
+		seatTransformName = Seat
+		portraitCameraName = PilotCam
 		allowCrewHelmet = False
+		kerbalEyeOffset = 0, 0.055, 0
+		displayseatName = #autoLoc_6002190 //#autoLoc_6002190 = Pilot Seat
 	}
 	MODULE
 	{
 		name = InternalCameraSwitch
-		colliderTransformName = Focus_W1
-		cameraTransformName = Camera_Focus_W1
+		colliderTransformName = Cam1
+		cameraTransformName = Cam1
 	}
 	MODULE
 	{
 		name = InternalCameraSwitch
-		colliderTransformName = Focus_W2
-		cameraTransformName = Camera_Focus_W2
+		colliderTransformName = Cam2
+		cameraTransformName = Cam2
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = Cam3
+		cameraTransformName = Cam3
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = Cam4
+		cameraTransformName = Cam4
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = Cam5
+		cameraTransformName = Cam5
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = Cam6
+		cameraTransformName = Cam6
 	}
 	PROP
 	{
