--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1PodCockpit.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1PodCockpit.cfg
@@ -1,9 +1,9 @@
 INTERNAL
 {
-	name = mk1PodCockpitKSA
+	name = KSA_mk1PodCockpit
 	MODEL
 	{
-		model = Squad/Spaces/mk1PodCockpit
+		model = Squad/Spaces/mk1PodCockpit/model
 	}
 	MODULE
 	{
