--- a/GameData/KSA/IVAUpgrade/Patches/Mk1_LanderCan.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/Mk1_LanderCan.cfg
@@ -1,8 +1,9 @@
-@PART[landerCabinSmall]
+@PART[landerCabinSmall]:AFTER[RasterPropMonitor]
 {
 	%MODULE[RasterPropMonitor]
 	{
-		@storedStrings = v 1.4.0|06.01.2022| Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
+		%storedStrings = v 1.5.0|06.01.2022| Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
+		%triggeredEvents = ALCOR_CALLRECOVERYTEAM
 	}
 
 	@INTERNAL
@@ -31,6 +32,8 @@
 				DATA
 				{
 					internalName = KSA_landerCabinSmallInternal
+					storedStrings = v 1.5.0|06.01.2022| Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
+					triggeredEvents = ALCOR_CALLRECOVERYTEAM
 				}
 			}
 		}
