--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1CockpitInternal.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1CockpitInternal.cfg
@@ -1,18 +1,84 @@
 INTERNAL
 {
-	name = mk1CockpitInternalKSA
+	name = KSA_mk1CockpitInternal
+	MODEL
+	{
+		model = Squad/Spaces/mk1CockpitInternal/Mk1StandardIVA
+		texture = CockpitGeneric, Squad/Spaces/sharedAssets/CockpitGeneric
+		texture = CockpitGeneric_NRM, Squad/Spaces/sharedAssets/CockpitGeneric_NRM
+	}
+	MODEL
+	{
+		model = Squad/Spaces/OverlayMasks/Mk1StandardMask2
+		position = 0.0, 0.0, 0.175
+	}
+	MODEL
+	{
+		model = Squad/Spaces/OverlayMasks/Mk1StandardBorder2
+		position = 0.0, 0.0, 0.175
+	}
 	MODULE
 	{
 		name = InternalSeat
-		seatTransformName = CenterSeat
+		seatTransformName = Seat1
 		portraitCameraName = CockpitCam
 		allowCrewHelmet = false
+		kerbalEyeOffset = 0, 0.02, 0
+		displayseatName = #autoLoc_6002190 //#autoLoc_6002190 = Pilot Seat
 	}
 	MODULE
 	{
 		name = InternalCameraSwitch
-		colliderTransformName = focusCanopy
-		cameraTransformName = CanopyEyeTransform
+		colliderTransformName = DockingTrigger
+		cameraTransformName = DockingCam
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = DockingTrigger2
+		cameraTransformName = DockingCam
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = Cam1Trigger
+		cameraTransformName = Cam1
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = Cam2
+		cameraTransformName = Cam2
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = Cam3
+		cameraTransformName = Cam3
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = Cam4Trigger
+		cameraTransformName = Cam4
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = Cam5Trigger
+		cameraTransformName = Cam5
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = SelfieTrigger1
+		cameraTransformName = SelfieCam1
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = SelfieTrigger2
+		cameraTransformName = SelfieCam2
 	}
 	PROP
 	{
