Make a clone of the internal lightswitch prop and hook it up to mk1pod and mk1landercan

--- a/GameData/KSA/IVAUpgrade/Patches/ASET_Props.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/ASET_Props.cfg
@@ -21,3 +21,11 @@
         @labelText = [#000000]  STAB / TRANS
     }
 }
+
+// create a clone of the CockpitLightSwitch without the JSIActionGroupSwitch module so that the light names can be customized per-pod without having to make a prop specific to each pod
++PROP[CockpitLightSwitch]
+{
+    @name = KSA_CockpitLightSwitch
+
+    -MODULE[JSIActionGroupSwitch] {}
+}
