--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_landerCabinSmallInternal.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_landerCabinSmallInternal.cfg
@@ -876,3 +876,21 @@ INTERNAL
 		scale = 268,1,1
 	}
 }
+
+// this is done as a patch instead of inline because the unity editor doesn't think this is a real prop
+@INTERNAL[KSA_landerCabinSmallInternal]
+{
+	@PROP[CockpitLightSwitch]
+	{
+		@name = KSA_CockpitLightSwitch
+
+		// copy the module from the prop definition
+		#@PROP[CockpitLightSwitch]/MODULE[JSIActionGroupSwitch] {}
+
+		// change the internal light name
+		@MODULE[JSIActionGroupSwitch]
+		{
+			@internalLightName = light_center
+		}
+	}
+}
