fix RasterPropMonitorComputer patch

--- a/GameData/KSA/IVAUpgrade/Patches/Mk1_Cockpit.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/Mk1_Cockpit.cfg
@@ -1,6 +1,6 @@
 @PART[Mark1Cockpit]:AFTER[RasterPropMonitor]
 {
-	%MODULE
+	%MODULE[RasterPropMonitorComputer]
 	{
 		%storedStrings =     v 1.5.0|06.04.2022|  Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
 		%triggeredEvents = ALCOR_CALLRECOVERYTEAM
