--- a/GameData/KSA/IVAUpgrade/Patches/Mk1_LanderCan.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/Mk1_LanderCan.cfg
@@ -1,6 +1,6 @@
 @PART[landerCabinSmall]:AFTER[RasterPropMonitor]
 {
-	%MODULE[RasterPropMonitor]
+	%MODULE[RasterPropMonitorComputer]
 	{
 		%storedStrings = v 1.5.0|06.01.2022| Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
 		%triggeredEvents = ALCOR_CALLRECOVERYTEAM
