add internal light support to mk1 cockpit and mk1 inline also new layout for mk1inline props

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1CockpitInternal.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1CockpitInternal.cfg
@@ -753,3 +753,21 @@ INTERNAL
 		scale = 0.300000012,0.300000012,0.400000006
 	}
 }
+
+// this is done as a patch instead of inline because the unity editor doesn't think this is a real prop
+@INTERNAL[KSA_mk1CockpitInternal]
+{
+	@PROP[CockpitLightSwitch]
+	{
+		@name = KSA_CockpitLightSwitch
+
+		// copy the module from the prop definition
+		#@PROP[CockpitLightSwitch]/MODULE[JSIActionGroupSwitch] {}
+
+		// change the internal light name
+		@MODULE[JSIActionGroupSwitch]
+		{
+			@internalLightName = Main light|Sec light
+		}
+	}
+}
