mk1pod: adjust camera settings and move comms prop

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1pod_iva.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1pod_iva.cfg
@@ -8,11 +8,17 @@ INTERNAL
 	MODULE
 	{
 		name = InternalSeat
-		kerbalEyeOffset = 0, -0.01, -0.08
+		kerbalEyeOffset = 0, -0.1, -0.08
 		seatTransformName = pilotSeat_01
 		portraitCameraName = pilotCamera_01
 		allowCrewHelmet = false
 		hideKerbal = head
+		maxRot = 70
+		maxPitch = 75
+	}
+	MODULE
+	{
+		name = JSISetInternalCameraFOV
 	}
 	MODULE
 	{
@@ -905,9 +911,9 @@ INTERNAL
 	PROP
 	{
 		name = ASET_RecoveryBeacon
-		position = 0.438608617,0.128393635,0.0614295974
-		rotation = 0.525978625,-0.295006007,0.447388768,0.660425127
-		scale = 0.500000596,0.49999994,0.5
+		position = 0.429973066,0.13011086,0.0651405454
+		rotation = 0.472385198,-0.334343314,0.438350797,0.68768847
+		scale = 0.600000322,0.600000143,0.599999964
 	}
 	PROP
 	{
@@ -925,13 +931,6 @@ INTERNAL
 	}
 	PROP
 	{
-		name = ASET_COMM_Radio
-		position = 0.431330532,0.0761719942,0.0537654869
-		rotation = 0.536290944,-0.44643414,0.349030286,0.625512958
-		scale = 0.450000048,0.450000077,0.450000256
-	}
-	PROP
-	{
 		name = JSIEvaCockpitHandle
 		position = -0.129500002,0.462099999,-0.0780000016
 		rotation = 0.509584785,-0.312061489,0.669237316,0.441658765
@@ -941,8 +940,15 @@ INTERNAL
 	{
 		name = JSIMainCompUnit
 		position = -0.391900003,0.397799999,0.138099998
-		rotation = 0.175019711,0.565346539,-0.257917583,0.763694942
-		scale = 1,1,1
+		rotation = 0.178355739,0.575220644,-0.255622029,0.756285608
+		scale = 0.99999994,1.00000024,1
+	}
+	PROP
+	{
+		name = ASET_COMM_Radio
+		position = -0.420209169,0.33424893,0.143984154
+		rotation = 0.660891294,0.225990355,-0.587494493,0.408658057
+		scale = 1.45000017,1.44999969,1.44999969
 	}
 	PROP
 	{
