put agmemos on aset retrobutton ag buttons

--- a/GameData/KSA/IVAUpgrade/Patches/ASET_Props.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/ASET_Props.cfg
@@ -29,3 +29,16 @@
 
     -MODULE[JSIActionGroupSwitch] {}
 }
+
+// change the label on retro-button action groups to use the memo instead of just the number
+@PROP[RB_AG*]
+{
+    @MODULE[JSILabel]
+    {
+        @labelText = #$../name$
+        @labelText ^= :RB_AG10:<=0=> $$&$$ AGMEMO0:
+        @labelText ^= :RB_AG:<=0=> $$&$$ AGMEMO:
+
+        @fontSize = 2
+    }
+}
