more retro apollo CM

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_kp0110.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_kp0110.cfg
@@ -261,6 +261,13 @@ INTERNAL
 	}
 	PROP
 	{
+		name = DigitalIndicator_GFORCE
+		position = -0.691297114,0.198860645,-0.0790841356
+		rotation = 0.669130623,0,0,0.74314481
+		scale = 0.600000024,0.650000095,0.650000095
+	}
+	PROP
+	{
 		name = DigitalIndicator_DELTAV
 		position = -0.691297114,0.177786738,-0.0768692121
 		rotation = 0.669130623,0,0,0.74314481
@@ -324,66 +331,17 @@ INTERNAL
 	}
 	PROP
 	{
-		name = switchWGuard_GEAR
-		position = -0.339596987,0.415621877,-0.101866603
+		name = ASET_FDAI-01
+		position = -0.284556955,0.423669606,-0.109771132
 		rotation = 0.669130623,0,0,0.74314481
-		scale = 1.125,1.12500048,1.12500048
+		scale = 0.780000091,0.845000565,0.845000565
 	}
 	PROP
 	{
-		name = Lable_Temperature
-		position = -0.269187689,0.465055883,-0.107062303
+		name = FDAI_GMCP-01
+		position = -0.307056993,0.31521976,-0.0913139582
 		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.433928609,0.642843544,0.64287293
-	}
-	PROP
-	{
-		name = IndicatorADV_PodTemp
-		position = -0.257844687,0.413034141,-0.102550052
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.610714376,0.61070174,0.610728562
-	}
-	PROP
-	{
-		name = IndicatorADV_ShieldTemp
-		position = -0.280934334,0.412857383,-0.102750272
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.610714376,0.61070174,0.610728562
-	}
-	PROP
-	{
-		name = Lable_LGear
-		position = -0.339348078,0.465055883,-0.107062303
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.273214191,0.642843544,0.64287293
-	}
-	PROP
-	{
-		name = DigitalIndicator_TerminalVel
-		position = -0.274571896,0.363595843,-0.0963984728
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.506249905,0.450000763,0.450000763
-	}
-	PROP
-	{
-		name = DigitalIndicator_GFORCE
-		position = -0.326546907,0.363595843,-0.0963984728
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.506249905,0.450000763,0.450000763
-	}
-	PROP
-	{
-		name = Lable_Brakes
-		position = -0.309036255,0.465055883,-0.107062303
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.273214191,0.642843544,0.64287293
-	}
-	PROP
-	{
-		name = switchWGuard_BRAKE
-		position = -0.309285164,0.415804178,-0.10187193
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 1.125,1.12500048,1.12500048
+		scale = 1.08000004,1.1700002,1.1700002
 	}
 	PROP
 	{
@@ -430,182 +388,7 @@ INTERNAL
 	PROP
 	{
 		name = pb_Warp_Next
-		position = -0.436447054,0.23759158,-0.0788110942
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.449999988,0.450000137,0.450000018
-	}
-	PROP
-	{
-		name = LowFuelIndicator
-		position = -0.262196988,0.341927797,-0.0941210538
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = LowMonopropIndicator
-		position = -0.262196988,0.330247104,-0.0928933695
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = LowChargeIndicator
-		position = -0.262196988,0.318566501,-0.0916656852
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = AlarmEngineOverheatIndicator
-		position = -0.262196988,0.306885779,-0.0904380009
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = LowALTIndicator
-		position = -0.286497086,0.341927797,-0.0941210538
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = AlarmTurnOverIndicator
-		position = -0.286497086,0.330247104,-0.0928933695
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = AlarmHighSlopeIndicator
-		position = -0.286497086,0.318566501,-0.0916656852
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = AlarmLLegsIndicator
-		position = -0.286497086,0.306885779,-0.0904380009
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = onHighGIndicator
-		position = -0.310796946,0.341927797,-0.0941210538
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = onAirBrakingIndicator
-		position = -0.310796946,0.330247104,-0.0928933695
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = AlarmHEATIndicator
-		position = -0.310796946,0.318566501,-0.0916656852
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = AlarmGroundProximityIndicator
-		position = -0.310796946,0.306885779,-0.0904380009
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = onASCIndicator
-		position = -0.335097045,0.341927797,-0.0941210538
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = LowTWRIndicator
-		position = -0.335097045,0.330247104,-0.0928933695
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = onDESIndicator
-		position = -0.335097045,0.318566501,-0.0916656852
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = onCONTACTIndicator
-		position = -0.335097045,0.306885779,-0.0904380009
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = DigitalIndicator_ImpactSPEED
-		position = -0.274889439,0.293848038,-0.0866243094
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.461699933,0.485999972,0.405000001
-	}
-	PROP
-	{
-		name = DigitalIndicator_TWR
-		position = -0.322539777,0.293848038,-0.0866243094
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.461699933,0.485999972,0.405000001
-	}
-	PROP
-	{
-		name = pb_GPWS_ON-OFF-SH01-B6-C2
-		position = -0.41889149,0.335162878,-0.0914553255
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = pb_WARN_HIGH_G_ON-OFF-FT-B2
-		position = -0.363001555,0.306686223,-0.088462323
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = pb_WARN_SLOPE_ON-OFF-FT-B2
-		position = -0.362799138,0.335726768,-0.0915146023
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = pb_WARN_TUMBLE_ON-OFF-FT-B2
-		position = -0.386046141,0.306968153,-0.0884919614
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = pb_AVAS_ON-OFF-FT-B2
-		position = -0.386046141,0.335485101,-0.0914891958
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.405000001,0.405000001
-	}
-	PROP
-	{
-		name = ASET_ALT_WARN_Dial
-		position = -0.419741988,0.306304514,-0.0874448419
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.405000001,0.242999986,0.405000001
-	}
-	PROP
-	{
-		name = DigitalIndicator_ALT_WARN_SetupDisplay
-		position = -0.419741988,0.289137781,-0.0872694775
+		position = -0.434496969,0.287400812,-0.0819547921
 		rotation = 0.669130623,0,0,0.74314481
 		scale = 0.283500046,0.283499777,0.283499777
 	}
@@ -705,7 +488,21 @@ INTERNAL
 		name = On_CHUTE_SAFE_TO_DEPLOY
 		position = -0.400878906,0.40181905,-0.100367896
 		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.715905547,0.715905428,0.715905666
+		scale = 0.715905607,0.715905428,0.715905309
+	}
+	PROP
+	{
+		name = switchTumble_Gear
+		position = -0.434192359,0.369062662,-0.0969730467
+		rotation = 0.669130623,0,0,0.74314481
+		scale = 0.477270007,0.477270901,0.477270573
+	}
+	PROP
+	{
+		name = switchTumble_Brakes
+		position = -0.401499361,0.369062662,-0.0969730467
+		rotation = 0.669130623,0,0,0.74314481
+		scale = 0.477270007,0.477270901,0.477270573
 	}
 	PROP
 	{
@@ -814,48 +611,6 @@ INTERNAL
 	}
 	PROP
 	{
-		name = Lable_Atmosphere
-		position = 0.415103018,0.394736916,-0.0996715054
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.540449858,0.600634754,0.642858148
-	}
-	PROP
-	{
-		name = DigitalIndicator_AtmDen
-		position = 0.415103018,0.375582427,-0.0976582915
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.539999902,0.540000439,0.564047813
-	}
-	PROP
-	{
-		name = DigitalIndicator_ATMPRESS
-		position = 0.415103018,0.356619716,-0.0956652313
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.539999902,0.540000439,0.564047813
-	}
-	PROP
-	{
-		name = DigitalIndicator_DYNAMICPRESSURE
-		position = 0.415103018,0.338105559,-0.0937193334
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.539999902,0.540000439,0.564047813
-	}
-	PROP
-	{
-		name = DigitalIndicator_EASPEED
-		position = 0.415103018,0.319655359,-0.091780141
-		rotation = 0.669130623,0,0,0.74314481
-		scale = 0.539999902,0.540000439,0.564047813
-	}
-	PROP
-	{
-		name = DigitalIndicator_MachNumber
-		position = 0.415103018,0.301462293,-0.0898679942
-		rotation = 0.669130564,0,0,0.74314487
-		scale = 0.539999902,0.540000141,0.564047933
-	}
-	PROP
-	{
 		name = kOSTerminal
 		position = 0.0832030103,0.391914904,-0.0949506685
 		rotation = 0.669130623,0,0,0.74314481
@@ -912,6 +667,13 @@ INTERNAL
 	}
 	PROP
 	{
+		name = ASET_DSKY
+		position = 0.423903018,0.360383511,-0.0926420912
+		rotation = 0.669130623,0,0,0.74314481
+		scale = 0.600000024,0.600000262,0.600000262
+	}
+	PROP
+	{
 		name = JSIMainCompUnit
 		position = -0.777199984,0.567099988,0.134900004
 		rotation = 0.098876439,0.469109178,-0.168878123,0.861185372
@@ -943,6 +705,13 @@ INTERNAL
 	}
 }
 
+@PART[bluedog_Apollo_CrewPod]:HAS[!MODULE[RasterPropMonitorComputer]]
+{
+	MODULE
+	{
+		name = RasterPropMonitorComputer
+	}
+}
 
 @PART[bluedog_Apollo_CrewPod]:AFTER[zzz_Reviva]
 {
