add bdb apollo LM

--- a/GameData/KSA/IVAUpgrade/Patches/ASET_Props.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/ASET_Props.cfg
@@ -30,6 +30,13 @@
     -MODULE[JSIActionGroupSwitch] {}
 }
 
++PROP[switchRotary_FlightDeckLight]
+{
+    @name = KSA_switchRotary_FlightDeckLight
+
+    -MODULE[JSIActionGroupSwitch] {}
+}
+
 // change the label on retro-button action groups to use the memo instead of just the number
 @PROP[RB_AG*]
 {
