bdb lm: fix reviva setup

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_lm.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_lm.cfg
@@ -1022,6 +1022,49 @@ INTERNAL
 	}
 }
 
+// create the reviva partswitch module if it doesn't exist
+@PART[bluedog_LM_Ascent_Cockpit]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[~moduleID[IVASwitch]]]:AFTER[zzz_Reviva]
+{
+	MODULE
+	{
+		name = ModuleB9PartSwitch
+		moduleID = IVASwitch
+		switcherDescription = IVA
+		switcherDescriptionPlural = IVAs
+		switchInFlight = true
+		uiGroupName = IVASwitch
+		uiGroupDisplayName = IVA Switch
+
+		SUBTYPE
+		{
+			name = BDB
+			primaryColor = Blue
+			secondaryColor = Blue
+			descriptionSummary = BDB IVA
+			descriptionDetail = Use normal BDB Stock IVA.\n<color=green>Low Tech</color>
+			
+			MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleIVASwitch
+				}
+				DATA
+				{
+					internalName = Lunar
+				}
+			}
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleIVASwitch
+		internalName = Lunar
+	}
+}
+
+// add the KSA variant
 @PART[bluedog_LM_Ascent_Cockpit]:AFTER[zzz_Reviva]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[IVASwitch]]
