Add NEEDS clauses to avoid warnings

--- a/GameData/KSA/IVAUpgrade/Patches/ASET_Props.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/ASET_Props.cfg
@@ -23,14 +23,14 @@
 }
 
 // create a clone of the CockpitLightSwitch without the JSIActionGroupSwitch module so that the light names can be customized per-pod without having to make a prop specific to each pod
-+PROP[CockpitLightSwitch]
++PROP[CockpitLightSwitch]:NEEDS[ASET]
 {
     @name = KSA_CockpitLightSwitch
 
     -MODULE[JSIActionGroupSwitch] {}
 }
 
-+PROP[switchRotary_FlightDeckLight]
++PROP[switchRotary_FlightDeckLight]:NEEDS[ASET]
 {
     @name = KSA_switchRotary_FlightDeckLight
 
