--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_KV1_Internal.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_KV1_Internal.cfg
@@ -1,4 +1,4 @@
-INTERNAL
+INTERNAL:NEEDS[SquadExpansion,ASET]
 {
 	name = KSA_KV1_IVA
 	MODEL
@@ -848,7 +848,7 @@ INTERNAL
 // this is done as a patch instead of inline because the unity editor doesn't think this is a real prop
 @INTERNAL[KSA_KV1_IVA]
 {
-	@PROP[CockpitLightSwitch]
+	@PROP[CockpitLightSwitch]:NEEDS[ASET]
 	{
 		@name = KSA_CockpitLightSwitch
 
