--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_kp0110.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_kp0110.cfg
@@ -1,4 +1,4 @@
-INTERNAL
+INTERNAL:NEEDS[Bluedog_DB,ASET]
 {
 	name = KSA_bdb_apollo
 	MODEL
@@ -648,7 +648,7 @@ INTERNAL
 
 @INTERNAL[KSA_bdb_apollo]
 {
-	@PROP[switchRotary_FlightDeckLight]
+	@PROP[switchRotary_FlightDeckLight]:NEEDS[ASET]
 	{
 		@name = KSA_switchRotary_FlightDeckLight
 
