--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1CockpitInternal.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1CockpitInternal.cfg
@@ -1,4 +1,4 @@
-INTERNAL
+INTERNAL:NEEDS[ASET]
 {
 	name = KSA_mk1CockpitInternal
 	MODEL
@@ -666,7 +666,7 @@ INTERNAL
 // this is done as a patch instead of inline because the unity editor doesn't think this is a real prop
 @INTERNAL[KSA_mk1CockpitInternal]
 {
-	@PROP[CockpitLightSwitch]
+	@PROP[CockpitLightSwitch]:NEEDS[ASET]
 	{
 		@name = KSA_CockpitLightSwitch
 
