--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_lm.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_lm.cfg
@@ -1,4 +1,4 @@
-INTERNAL
+INTERNAL:NEEDS[Bluedog_DB,ASET]
 {
 	name = KSA_bdb_lm
 	MODEL
@@ -999,7 +999,7 @@ INTERNAL
 
 @INTERNAL[KSA_bdb_lm]
 {
-	@PROP[switchRotary_FlightDeckLight]
+	@PROP[switchRotary_FlightDeckLight]:NEEDS[ASET]
 	{
 		@name = KSA_switchRotary_FlightDeckLight
 
