mk1inline: add eva cockpit handle to side

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1InlineInternal.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1InlineInternal.cfg
@@ -1,4 +1,4 @@
-INTERNAL:NEEDS[ASET]
+INTERNAL
 {
 	name = KSA_mk1InlineInternal
 	MODEL
@@ -65,8 +65,8 @@ INTERNAL:NEEDS[ASET]
 	PROP
 	{
 		name = ASET_RecoveryBeacon
-		position = 0.300900012,0.513599992,-0.163000003
-		rotation = 0.453392237,-0.52971828,0.485522509,0.527353644
+		position = -0.29350999,0.514769971,-0.0807500035
+		rotation = 0.453400075,0.534627497,-0.486200511,0.52173835
 		scale = 0.5,0.5,0.5
 	}
 	PROP
@@ -482,10 +482,17 @@ INTERNAL:NEEDS[ASET]
 		rotation = 0.448687851,0.531568289,-0.398178279,0.597970247
 		scale = 2,0.200000003,1
 	}
+	PROP
+	{
+		name = JSIEvaCockpitHandle
+		position = 0.330599993,0.529100001,-0.103500001
+		rotation = 0.0979394168,-0.716199756,0.119233251,0.680624247
+		scale = 1,1,1
+	}
 }
 
 // this is done as a patch instead of inline because the unity editor doesn't think this is a real prop
-@INTERNAL[KSA_mk1InlineInternal]
+@INTERNAL[KSA_mk1InlineInternal]:NEEDS[ASET]
 {
 	@PROP[CockpitLightSwitch]
 	{
