tweek NEEDS again so it's not so restrictive

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1CockpitInternal.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1CockpitInternal.cfg
@@ -1,4 +1,4 @@
-INTERNAL:NEEDS[ASET]
+INTERNAL
 {
 	name = KSA_mk1CockpitInternal
 	MODEL
@@ -664,7 +664,7 @@ INTERNAL:NEEDS[ASET]
 }
 
 // this is done as a patch instead of inline because the unity editor doesn't think this is a real prop
-@INTERNAL[KSA_mk1CockpitInternal]
+@INTERNAL[KSA_mk1CockpitInternal]:NEEDS[ASET]
 {
 	@PROP[CockpitLightSwitch]:NEEDS[ASET]
 	{
