tweak NEEDS to work better in unity

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1pod_iva.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_mk1pod_iva.cfg
@@ -1,4 +1,4 @@
-INTERNAL:NEEDS[ASET]
+INTERNAL
 {
 	name = KSA_mk1pod_IVA
 	MODEL
@@ -1053,7 +1053,7 @@ INTERNAL:NEEDS[ASET]
 // this is done as a patch instead of inline because the unity editor doesn't think this is a real prop
 @INTERNAL[KSA_mk1pod_IVA]
 {
-	@PROP[CockpitLightSwitch]
+	@PROP[CockpitLightSwitch]:NEEDS[ASET]
 	{
 		@name = KSA_CockpitLightSwitch
 
