Fix typo in mk1landercan patch

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_landerCabinSmallInternal.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_landerCabinSmallInternal.cfg
@@ -1080,7 +1080,7 @@ INTERNAL
 }
 
 // this is done as a patch instead of inline because the unity editor doesn't think this is a real prop
-@INTERNAL[KSA_landerCabinSmallInternal]:NEDS[ASET]
+@INTERNAL[KSA_landerCabinSmallInternal]:NEEDS[ASET]
 {
 	@PROP[CockpitLightSwitch]
 	{
