KSA now works with RPM OR MAS

--- a/GameData/KSA/IVAUpgrade/Patches/Mk1_Cockpit.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/Mk1_Cockpit.cfg
@@ -1,11 +1,14 @@
-@PART[Mark1Cockpit]:AFTER[RasterPropMonitor]
+@PART[Mark1Cockpit]
 {
 	%MODULE[RasterPropMonitorComputer]
 	{
 		%storedStrings =     v 1.6.0|08.09.2022|  Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
 		%triggeredEvents = ALCOR_CALLRECOVERYTEAM
 	}
+}
 
+@PART[Mark1Cockpit]:FOR[KSA]
+{
 	@INTERNAL
 	{
 		@name = KSA_mk1CockpitInternal
