--- a/GameData/KSA/IVAUpgrade/Patches/Mk1_LanderCan.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/Mk1_LanderCan.cfg
@@ -1,11 +1,14 @@
-@PART[landerCabinSmall]:AFTER[RasterPropMonitor]
+@PART[landerCabinSmall]
 {
 	%MODULE[RasterPropMonitorComputer]
 	{
 		%storedStrings = v 1.6.2|09.13.2022| Mk1 LanderCan | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
 		%triggeredEvents = ALCOR_CALLRECOVERYTEAM
 	}
+}
 
+@PART[landerCabinSmall]:FOR[KSA]
+{
 	@INTERNAL
 	{
 		@name = KSA_landerCabinSmallInternal
