--- a/GameData/KSA/IVAUpgrade/Patches/mk2LanderCan.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/mk2LanderCan.cfg
@@ -1,11 +1,14 @@
-@PART[mk2LanderCabin_v2]:AFTER[RasterPropMonitor]
+@PART[mk2LanderCabin_v2]
 {
 	%MODULE[RasterPropMonitorComputer]
 	{
 		%storedStrings = v 1.6.2|09.09.2022| Mk2 LanderCan | Mk2 ||KSA-A1|MK2| KSA, JSI, A.S.E.T. & Squad
 		%triggeredEvents = ALCOR_CALLRECOVERYTEAM
 	}
+}
 
+@PART[mk2LanderCabin_v2]:FOR[KSA]
+{
 	@INTERNAL
 	{
 		@name = KSA_mk2LanderCanInternal
