--- a/GameData/KSA/IVAUpgrade/Patches/Mk1_Pod.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/Mk1_Pod.cfg
@@ -1,11 +1,14 @@
-@PART[mk1pod]:AFTER[RasterPropMonitor]
+@PART[mk1pod]
 {
 	%MODULE[RasterPropMonitorComputer]
 	{
 		%storedStrings = v 1.5.0|06.01.2022| Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
 		%triggeredEvents = ALCOR_CALLRECOVERYTEAM
 	}
+}
 
+@PART[mk1pod]:FOR[KSA]
+{
 	@INTERNAL
 	{
 		@name = KSA_mk1PodCockpit
