--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_KV1_Internal.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_KV1_Internal.cfg
@@ -1,4 +1,4 @@
-INTERNAL:NEEDS[SquadExpansion,ASET]
+INTERNAL
 {
 	name = KSA_KV1_IVA
 	MODEL
@@ -844,6 +844,8 @@ INTERNAL:NEEDS[SquadExpansion,ASET]
 		scale = 1,1,1
 	}
 }
+
+!INTERNAL[KSA_KV1_IVA]::NEEDS[!SquadExpansion] {}
 
 // this is done as a patch instead of inline because the unity editor doesn't think this is a real prop
 @INTERNAL[KSA_KV1_IVA]
