fix error message when probecontrolroom isn't installed

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_MissionControl.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_MissionControl.cfg
@@ -1131,4 +1131,4 @@ INTERNAL
 	}
 }
 
--INTERNAL[KSA_MissionControl]:NEEDS[!ProbeControlRoom] {}
+!INTERNAL[KSA_MissionControl]:NEEDS[!ProbeControlRoom] {}
