remove extra : from kv1 internal

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_KV1_Internal.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_KV1_Internal.cfg
@@ -845,7 +845,7 @@ INTERNAL
 	}
 }
 
-!INTERNAL[KSA_KV1_IVA]::NEEDS[!SquadExpansion] {}
+!INTERNAL[KSA_KV1_IVA]:NEEDS[!SquadExpansion] {}
 
 // this is done as a patch instead of inline because the unity editor doesn't think this is a real prop
 @INTERNAL[KSA_KV1_IVA]
