sock: hook up light switches

--- a/GameData/KSA/IVAUpgrade/Patches/ASET_Props.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/ASET_Props.cfg
@@ -37,8 +37,15 @@
     -MODULE[JSIActionGroupSwitch] {}
 }
 
++PROP[switchRotary_FloodLight]:NEEDS[ASET]
+{
+    @name = KSA_switchRotary_FloodLight
+
+    -MODULE[JSIActionGroupSwitch] {}
+}
+
 // change the label on retro-button action groups to use the memo instead of just the number
-@PROP[RB_AG*]
+@PROP[RB_AG*]:HAS[@MODULE[JSILabel]:HAS[~labelText[*AGMEMO*]]]
 {
     @MODULE[JSILabel]
     {
