Fix #11: get reviva RPMComputer data set up correctly

--- a/GameData/KSA/IVAUpgrade/Patches/Mk1_Inline_Cockpit.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/Mk1_Inline_Cockpit.cfg
@@ -35,8 +35,11 @@
 				DATA
 				{
 					internalName = KSA_mk1InlineInternal
-					storedStrings =     v 1.6.0|08.09.2022|  Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
-					triggeredEvents = ALCOR_CALLRECOVERYTEAM
+					RasterPropMonitorComputer
+					{
+						storedStrings =     v 1.6.0|08.09.2022|  Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
+						triggeredEvents = ALCOR_CALLRECOVERYTEAM
+					}
 				}
 			}
 		}
