--- a/GameData/KSA/IVAUpgrade/Patches/mk2LanderCan.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/mk2LanderCan.cfg
@@ -35,8 +35,11 @@
 				DATA
 				{
 					internalName = KSA_mk2LanderCanInternal
-					storedStrings = v 1.6.2|09.09.2022| Mk2 LanderCan | Mk2 ||KSA-A1|MK2| KSA, JSI, A.S.E.T. & Squad
-					triggeredEvents = ALCOR_CALLRECOVERYTEAM
+					RasterPropMonitorComputer
+					{
+						storedStrings = v 1.6.2|09.09.2022| Mk2 LanderCan | Mk2 ||KSA-A1|MK2| KSA, JSI, A.S.E.T. & Squad
+						triggeredEvents = ALCOR_CALLRECOVERYTEAM
+					}
 				}
 			}
 		}
