--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_kp0110.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_kp0110.cfg
@@ -691,7 +691,10 @@ INTERNAL:NEEDS[Bluedog_DB,ASET]
 				DATA
 				{
 					internalName = KSA_bdb_apollo
-					triggeredEvents = ALCOR_CALLRECOVERYTEAM
+					RasterPropMonitorComputer
+					{
+						triggeredEvents = ALCOR_CALLRECOVERYTEAM
+					}
 				}
 			}
 
