--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_lm.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_lm.cfg
@@ -1085,7 +1085,10 @@ INTERNAL:NEEDS[Bluedog_DB,ASET]
 				DATA
 				{
 					internalName = KSA_bdb_lm
-					triggeredEvents = ALCOR_CALLRECOVERYTEAM
+					RasterPropMonitorComputer
+					{
+						triggeredEvents = ALCOR_CALLRECOVERYTEAM
+					}
 				}
 			}
 		}
