--- a/GameData/KSA/IVAUpgrade/Patches/KV1.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/KV1.cfg
@@ -35,8 +35,11 @@
 				DATA
 				{
 					internalName = KSA_KV1_IVA
-					storedStrings =     v 1.6.0|08.09.2022|  KV1 Pod | KV1 ||KSA-A1|KV1| KSA, JSI, A.S.E.T. & Squad
-					triggeredEvents = ALCOR_CALLRECOVERYTEAM
+					RasterPropMonitorComputer
+					{
+						storedStrings =     v 1.6.0|08.09.2022|  KV1 Pod | KV1 ||KSA-A1|KV1| KSA, JSI, A.S.E.T. & Squad
+						triggeredEvents = ALCOR_CALLRECOVERYTEAM
+					}
 				}
 			}
 		}
