--- a/GameData/KSA/IVAUpgrade/Patches/Mk1_Pod.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/Mk1_Pod.cfg
@@ -35,8 +35,11 @@
 				DATA
 				{
 					internalName = KSA_mk1PodCockpit
-					storedStrings = v 1.5.0|06.01.2022| Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
-					triggeredEvents = ALCOR_CALLRECOVERYTEAM
+					RasterPropMonitorComputer
+					{
+						storedStrings = v 1.5.0|06.01.2022| Mk1 Cockpit | Mk1 ||KSA-A1|MK1| KSA, JSI, A.S.E.T. & Squad
+						triggeredEvents = ALCOR_CALLRECOVERYTEAM
+					}
 				}
 			}
 		}
