Fix #6: remove window colliders from mk2 lander can (requires freeiva)

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_mk2LanderCan.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_mk2LanderCan.cfg
@@ -927,3 +927,17 @@ INTERNAL
 		}
 	}
 }
+@INTERNAL[KSA_mk2LanderCanInternal]:AFTER[FreeIva]
+{
+	@MODULE[InternalModuleFreeIva]
+	{
+		%DeleteInternalObject
+		{
+			objectName = WindowFocusPoint_05
+			objectName = WindowFocusPoint_04
+		}
+	}
+
+	!MODULE[InternalCameraSwitch]:HAS[#colliderTransformName[WindowFocusPoint_04]] {}
+	!MODULE[InternalCameraSwitch]:HAS[#colliderTransformName[WindowFocusPoint_05]] {}
+}
