update stored strings for sock cockpit

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_sock_shuttle.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_sock_shuttle.cfg
@@ -6,6 +6,8 @@
 	}
 	%MODULE[RasterPropMonitorComputer]
 	{
+		%storedStrings =      v 1.6.5|03.30.2023|  OV-100 Cockpit | OV-100 ||KSA-OV|OV| KSA, JSI, A.S.E.T. & Benjee10
+		%triggeredEvents = ALCOR_CALLRECOVERYTEAM
 	}
 }
 +PROP[htProps_seat_folding_blue]
