update mk2 lander can version string

--- a/GameData/KSA/IVAUpgrade/Patches/mk2LanderCan.cfg
+++ b/GameData/KSA/IVAUpgrade/Patches/mk2LanderCan.cfg
@@ -1,8 +1,10 @@
 @PART[mk2LanderCabin_v2]
 {
+	KSA_storedStrings = v 1.6.5|03.30.2023| Mk2 LanderCan | Mk2 ||KSA-A1|MK2| KSA, JSI, A.S.E.T. & Squad
+
 	%MODULE[RasterPropMonitorComputer]
 	{
-		%storedStrings = v 1.6.2|09.09.2022| Mk2 LanderCan | Mk2 ||KSA-A1|MK2| KSA, JSI, A.S.E.T. & Squad
+		%storedStrings = #$/KSA_storedStrings$
 		%triggeredEvents = ALCOR_CALLRECOVERYTEAM
 	}
 }
@@ -37,7 +39,7 @@
 					internalName = KSA_mk2LanderCanInternal
 					RasterPropMonitorComputer
 					{
-						storedStrings = v 1.6.2|09.09.2022| Mk2 LanderCan | Mk2 ||KSA-A1|MK2| KSA, JSI, A.S.E.T. & Squad
+						storedStrings = #$/KSA_storedStrings$
 						triggeredEvents = ALCOR_CALLRECOVERYTEAM
 					}
 				}
