mk2inline swivel seat works

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_mk2InlineInternal.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_mk2InlineInternal.cfg
@@ -756,3 +756,68 @@ INTERNAL
 		scale = 0.699999988,0.699999988,0.699999988
 	}
 }
+
+// make a copy of Seat_Pilot that can swivel
++PROP[Seat_Pilot]:NEEDS[FreeIva]
+{
+	@name = KSA_Seat_Pilot_swivel
+	MODULE
+	{
+		name = JSIVariableAnimator
+		VARIABLESET
+		{
+			scale = 0,1
+			variableName = PERSISTENT_COCKPIT_SEAT_POSITION
+			controlledTransform = KSA_Seat_Pilot_swivel
+			localRotationStart = 0, 0, 0
+			localRotationEnd = 0, 180, 0
+			longPath = yes
+			maxRateChange = 0.6
+		}
+	}
+}
+
+@INTERNAL[KSA_mk2InlineInternal]:AFTER[FreeIva]
+{
+	// we need to make sure the seat props have been added before attempting the reparent operation
+	// so move this module to the end of the INTERNAL cfg
+	+MODULE[InternalModuleFreeIva] {}
+	!MODULE[InternalModuleFreeIva],0 {}
+
+	%MODULE[InternalModuleFreeIva]
+	{
+		Reparent
+		{
+			childTransformName = Seat2
+			parentTransformName = KSA_Seat_Pilot_swivel
+		}
+		%DeleteInternalObject
+		{
+			objectName = TriggerDocking1
+			objectName = TriggerDocking2
+		}
+	}
+
+	!MODULE[InternalCameraSwitch]:HAS[#colliderTransformName[TriggerDocking1]] {}
+	!MODULE[InternalCameraSwitch]:HAS[#colliderTransformName[TriggerDocking2]] {}
+
+	@PROP[Seat_Pilot],1
+	{
+		@name = KSA_Seat_Pilot_swivel
+	}
+}
+
+// if FreeIva isn't installed, remove the seat position switches and just leave the stock "docking mode" monitor
+// that's under a camera switch collider so clicking that will turn your camera around, but won't move the seat or kerbal
+@INTERNAL[KSA_mk2InlineInternal]:NEEDS[!FreeIva]
+{
+	!PROP[tggl_SEAT_POSITION_T4M-S]	,* {}
+
+	PROP
+	{
+		name = MonitorDockingMode
+		position = 0,0.5942,-0.0062
+		rotation = 0.5000001,1.466925E-07,-1.063045E-07,0.8660254
+		scale = 0.96,0.9599998,0.9599999
+	}
+}
