mk2inline: hook up cockpit light switch

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_mk2InlineInternal.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_mk2InlineInternal.cfg
@@ -757,6 +757,22 @@ INTERNAL
 	}
 }
 
+@INTERNAL[KSA_mk2InlineInternal]
+{
+	@PROP[CockpitLightSwitch]
+	{
+		@name = KSA_CockpitLightSwitch
+
+		// copy the module from the prop definition
+		#@PROP[CockpitLightSwitch]/MODULE[JSIActionGroupSwitch] {}
+
+		@MODULE[JSIActionGroupSwitch]
+		{
+			@internalLightName = light1
+		}
+	}
+}
+
 // make a copy of Seat_Pilot that can swivel
 +PROP[Seat_Pilot]:NEEDS[FreeIva]
 {
